<resources>
    <string name="app_name">My Application</string>
    <string name="test">test</string>
    <string name="signup">회원가입</string>
    <string name="fullname">이름</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="username">아이디</string>
    <string name="loginhere">이미 아이디가 있으십니까? 로그인</string>
    <string name="login">마음만은 늘 함께</string>
    <string name="loginButton">로그인</string>
    <string name="signuphere">회원가입을 하시겠습니까?</string>
</resources>